# ev0lve_fixed

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  csgo_internal.sln  csgo_internal.vcxproj  csgo_internal.vcxproj.filters
contrib/gui/: .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  gui.sln  gui.vcxproj  gui.vcxproj.filters
contrib/gui/docs/: control.md
contrib/gui/include/gui/: anim.h  container.h  control.h  controls.h  gui.h  helpers.h  input.h  misc.h  notify_system.h  traits.h  values.h
contrib/gui/include/gui/controls/: button.h  checkbox.h  child_tab.h  color_picker.h  combo_box.h  control_container.h  group.h  hotkey.h  hsv_slider.h  label.h  layout.h  list.h  loading.h  notification_control.h  popup.h  search_result.h  selectable.h  slider.h  spacer.h  tab.h  tabs_layout.h  text_input.h  toggle_button.h  widget.h  window.h
contrib/gui/include/gui/popups/: color_picker_popup.h  combo_box_popup.h  dialog_box.h  hotkey_popup.h  message_box.h  notifications_popup.h  search_popup.h
contrib/gui/src/: anim.cpp  container.cpp  control.cpp  gui.cpp  helpers.cpp  input.cpp  notify_system.cpp
contrib/gui/src/controls/: button.cpp  checkbox.cpp  child_tab.cpp  color_picker.cpp  combo_box.cpp  control_container.cpp  group.cpp  hotkey.cpp  hsv_slider.cpp  label.cpp  layout.cpp  list.cpp  loading.cpp  notification_control.cpp  popup.cpp  search_result.cpp  selectable.cpp  slider.cpp  spacer.cpp  tab.cpp  tabs_layout.cpp  text_input.cpp  toggle_button.cpp  widget.cpp  window.cpp
contrib/gui/src/popups/: color_picker_popup.cpp  combo_box_popup.cpp  dialog_box.cpp  hotkey_popup.cpp  message_box.cpp  notifications_popup.cpp  search_popup.cpp
contrib/nlohmann/: json.hpp
src/: VirtualizerSDK.h  macros.h  main.cpp  stdafx.h
src/base/: cfg.cpp  cfg.h  crash_handler.cpp  crash_handler.h  debug_overlay.cpp  debug_overlay.h  draw_manager.cpp  draw_manager.h  event_log.cpp  event_log.h  game.cpp  game.h  hook_manager.cpp  hook_manager.h
src/detail/: aim_helper.cpp  aim_helper.h  custom_prediction.cpp  custom_prediction.h  custom_tracing.cpp  custom_tracing.h  dispatch_queue.cpp  dispatch_queue.h  dx_adapter.cpp  dx_adapter.h  entity_rendering.cpp  entity_rendering.h  events.cpp  events.h  player_list.cpp  player_list.h  shot_tracker.cpp  shot_tracker.h
src/gui/: preview_model.cpp  preview_model.h  public_software_item.cpp  public_software_item.h  selectable_config.cpp  selectable_config.h  selectable_script.cpp  selectable_script.h
src/gui/popups/: about_popup.cpp  about_popup.h  payment_popup.cpp  payment_popup.h  public_software_popup.cpp  public_software_popup.h
src/gui/widgets/: active_hotkeys.cpp  active_hotkeys.h  bomb.cpp  bomb.h  indicators.cpp  indicators.h  spectators.cpp  spectators.h
src/gui_legacy/: gui.h
src/hacks/: advertisement.cpp  advertisement.h  antiaim.cpp  antiaim.h  chams.cpp  chams.h  esp.cpp  esp.h  grenade_prediction.cpp  grenade_prediction.h  misc.cpp  misc.h  movement.cpp  movement.h  peek_assistant.cpp  peek_assistant.h  rage.cpp  rage.h  skinchanger.cpp  skinchanger.h  tickbase.cpp  tickbase.h  visuals.cpp  visuals.h
src/hooks/: client_mode.cpp  client_state.cpp  cs_grenade_projectile.cpp  cs_player.cpp  engine_client.cpp  entity.cpp  game_movement.cpp  hl_client.cpp  hooks.h  inputsystem.cpp  leaf_system.cpp  mat_system_surface.cpp  miscellaneous.cpp  model_render.cpp  prediction.cpp  recv_proxies.cpp  steam.cpp  trace_filter_for_player_head_collision.cpp  weapon.cpp
src/lua/: api_def.h  engine.cpp  engine.h  helpers.cpp  helpers.h  runtime_state.cpp  script.cpp  state.cpp  state.h
src/lua/api/: cvar.cpp  database.cpp  engine.cpp  entity.cpp  event.cpp  event_log.cpp  fs.cpp  globals.cpp  gui.cpp  input.cpp  mat.cpp  math.cpp  net.cpp  net_prop.cpp  panorama.cpp  payments.cpp  render.cpp  timer.cpp  user_cmd.cpp  utils.cpp  zip.cpp
src/menu/: debug.cpp  macros.h  menu.cpp  menu.h  misc.cpp  rage.cpp  scripts.cpp  skinchanger.cpp  visuals.cpp
src/menu/effects/: snow_effect.cpp  snow_effect.h
src/network/: app_hack.cpp  app_hack.h  helpers.cpp  helpers.h  load_indicator.cpp  load_indicator.h
src/resources/: cursor.h  icon_add.h  icon_alert.h  icon_allow_dynamic_load.h  icon_allow_insecure.h  icon_autoload.h  icon_bug.h  icon_clear.h  icon_cloud.h  icon_copy.h  icon_down.h  icon_error.h  icon_folder.h  icon_legit.h  icon_misc.h  icon_paste.h  icon_rage.h  icon_refresh.h  icon_reset.h  icon_save.h  icon_scripts.h  icon_search.h  icon_skins.h  icon_success.h  icon_up.h  icon_visuals.h  loading.h  pattern.h  pattern_group.h
src/sdk/: bitbuf.h  client_entity.h  client_entity_list.h  client_mode.h  client_state.h  color.h  convar.h  cs_player.h  cs_player_resource.h  cutlvector.h  datamap.h  debug_overlay.h  econ_item.h  engine_client.h  engine_sound.h  engine_trace.h  entity.h  game_event_manager.h  game_movement.h  game_rules.h  generated.h  global_vars_base.h  glow_manager.h  hl_client.h  input.h  input_system.h  intrinsics.h  keyvalues.h  localize.h  macros.h  mat.h  math.h  mdl_cache.h  mem_alloc.h  misc.h  model_info_client.h  model_render.h  panorama.h  plantedc4.h  prediction.h  (+13 more)
src/util/: anti_debug.h  circular_buffer.h  cvar_lexer.cpp  cvar_lexer.h  definitions.h  fnv1a.cpp  fnv1a.h  hook.h  macros.h  mem_guard.h  memory.cpp  memory.h  misc.h  poly.h  random.h  value_obfuscation.h
